--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-dorothy
-=======
+dcurtis' Svbtle-like template for Toto blogging engine
+======================================================
 
 A wonderful template for [toto](http://cloudhead.io/toto), the blogging engine.
